<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.DetectResultActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_result"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:contentDescription="@string/content_description_image_result"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/text_fruit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/text_placeholder_fruit_name"
                android:textAlignment="center"
                android:textColor="@color/dark_gray"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_result" />

            <TextView
                android:id="@+id/text_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/text_placeholder_freshness_status"
                android:textColor="@color/dark_gray"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_fruit" />

            <TextView
                android:id="@+id/text_nutrition_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/text_nutrition"
                android:textColor="@color/light_green"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_status" />

            <TextView
                android:id="@+id/text_nutrition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/text_placeholder_lorem_ipsum_1"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_nutrition_title" />

            <TextView
                android:id="@+id/text_tips_title"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/text_tips"
                android:textColor="@color/light_green"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_nutrition" />

            <TextView
                android:id="@+id/text_tips"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/text_placeholder_lorem_ipsum_1"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_tips_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="16dp"
        android:background="@drawable/btn_round"
        android:contentDescription="@string/content_description_back"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_recheck"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/manrope_medium"
        android:text="@string/btn_recheck"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>